// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryList should render and display a caption 1`] = `
<div>
  <Caption
    title="Willkommen"
  />
  <RemoteContent
    centered={true}
    dangerouslySetInnerHTML={
      Object {
        "__html": "test content",
      }
    }
  />
  <div
    className="list"
  >
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Object {},
          "_content": "",
          "_id": 35,
          "_order": 0,
          "_parentId": -1,
          "_parentUrl": null,
          "_thumbnail": null,
          "_title": "Willkommen in Augsburg",
          "_url": "/augsburg/de/willkommen/willkommen-in-augsburg",
        }
      }
      key="35"
    />
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Object {},
          "_content": "",
          "_id": 35,
          "_order": 0,
          "_parentId": -1,
          "_parentUrl": null,
          "_thumbnail": null,
          "_title": "Willkommen in Augsburg",
          "_url": "/augsburg/de/willkommen/willkommen-in-augsburg",
        }
      }
      key="35"
    />
  </div>
</div>
`;

exports[`CategoryList should render and not display a caption 1`] = `
<div>
  <RemoteContent
    centered={true}
    dangerouslySetInnerHTML={
      Object {
        "__html": undefined,
      }
    }
  />
  <div
    className="list"
  >
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Object {},
          "_content": "",
          "_id": 35,
          "_order": 0,
          "_parentId": -1,
          "_parentUrl": null,
          "_thumbnail": null,
          "_title": "Willkommen in Augsburg",
          "_url": "/augsburg/de/willkommen/willkommen-in-augsburg",
        }
      }
      key="35"
    />
    <CategoryListItem
      category={
        CategoryModel {
          "_availableLanguages": Object {},
          "_content": "",
          "_id": 35,
          "_order": 0,
          "_parentId": -1,
          "_parentUrl": null,
          "_thumbnail": null,
          "_title": "Willkommen in Augsburg",
          "_url": "/augsburg/de/willkommen/willkommen-in-augsburg",
        }
      }
      key="35"
    />
  </div>
</div>
`;
